--- a/SalesWebMvc/Views/Departments/Index.cshtml
+++ b/SalesWebMvc/Views/Departments/Index.cshtml
@@ -1,10 +1,8 @@
 ﻿@model IEnumerable<SalesWebMvc.Models.Department>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Department";
 }
-
-<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
