--- a/SalesWebMvc/Views/Departments/Index.cshtml
+++ b/SalesWebMvc/Views/Departments/Index.cshtml
@@ -7,9 +7,9 @@
 <h2>Department</h2>
 
 <body style="padding:50px">
-    <h3>
-        <a asp-action="Create">Create New</a>
-    </h3>
+    <p>
+        <a asp-action="Create" class="btn btn-default">Create New</a>
+    </p>
     <table class="table table-striped table-hover" >
         <thead>
             <tr class="success">
