--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -8,6 +8,9 @@
 
 <body style="padding:50px">
 
+    <p>
+        <a asp-action="Create" class="btn btn-default">Create New</a>
+    </p>
     <table class="table table-striped table-hover">
         <thead>
             <tr class="success">
