--- a/SalesWebMvc/Views/Sellers/Create.cshtml
+++ b/SalesWebMvc/Views/Sellers/Create.cshtml
@@ -24,13 +24,13 @@
                 <div class="form-group">
                     <label asp-for="Seller.BirthDate" class="control-label"></label>
                     <input asp-for="Seller.BirthDate" class="form-control" />
-                </div>              Seller.
-                <div class="form-groSeller.up">
+                </div>              
+                <div class="form-group">
                     <label asp-for="Seller.BaseSalary" class="control-label"></label>
                     <input asp-for="Seller.BaseSalary" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Seller.DepartmentId" class="control-label"></label>
+                    <label asp-for="Seller.Department" class="control-label"></label>
                     <select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments, "Id", 
                     "Name"))" class="form-control"></select>
                 </div>
